# Nikkei_OpenClose_Quant

./: .gitignore  main.ipynb  main.py  pyproject.toml
