[project]
name = "nikkei-openclose-quant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "jquants-api-client>=1.7.3",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.1",
    "scikit-learn>=1.6.1",
    "shap>=0.47.2",
    "tqdm>=4.67.1",
]
